--- a/Andres/3_JavaScript/e-commerce2023/client/media/index.html
+++ b/Andres/3_JavaScript/e-commerce2023/client/media/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
@@ -8,13 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- shop content -->
+    <!-- Shop content -->
     <div class="card-products-container">
-        <div class="card-products" id="shopContent"></div>   
+        <div class="card-products" id="shopContent"></div>
     </div>
 
+    <!-- Cart-btn -->
+    <div class="cart-btn" id="cart-btn">🛒</div>
+
+    <!-- modal(carrito por dentro) -->
+     <div class="modal-overlay" id="modal-overlay"></div><!-- Es como un background para mostrar la web en segundo plano-->
+     <div class="modal-container" id="modal-container"></div>
+
+    <!-- Script -->
     <script src="/client/js/products.js"></script>
     <script src="/client/js/index.js"></script>
+    <script src="/client/js/cart.js"></script>
 
     
 </body>
