--- a/Andres/3_JavaScript/e-commerce2023/client/media/index.html
+++ b/Andres/3_JavaScript/e-commerce2023/client/media/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <!-- SDK MercadoPago.js -->
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <title>CodeHive E-Commerce</title>
 </head>
 <body>
     <!-- Shop content -->
@@ -15,6 +17,9 @@
 
     <!-- Cart-btn -->
     <div class="cart-btn" id="cart-btn">🛒</div>
+
+    <!-- Cart counter -->
+     <span class="cart-counter" id="cart-counter">0</span>
 
     <!-- modal(carrito por dentro) -->
      <div class="modal-overlay" id="modal-overlay"></div><!-- Es como un background para mostrar la web en segundo plano-->
